added mixins and variables to variables.scss

--- a/src/components/global-navigation/global-navigation.module.scss
+++ b/src/components/global-navigation/global-navigation.module.scss
@@ -39,8 +39,7 @@
   }
 
   &__name {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
+    @include variables.text-md;
     font-weight: 500;
     display: flex;
     align-items: center;
